apps/forgejo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo
  namespace: forgejo
spec:
  ingressClassName: traefik
  rules:
    - host: forgejo.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forgejo
                port: { number: 3000 }
